handle get changes
