# server/controllers/roundAnalysisCtrl.js
@@ -6,6 +6,7 @@
 
 const RoundAnalysis = require('../models').roundAnalysis.RoundAnalysis
 const co = require('co')
+const db = require('../lib/database')
 
 module.exports = {
   getAnalysis: co.wrap(getData),
@@ -16,17 +17,39 @@ function * getData (req, res, next) {
   try {
     let doc = {}
     if (process.env.NODE_MOCK) {
-      doc = yield { _id: 0, courseCode: 'xx1122', comment_sv: 'mockdataSV', comment_en: 'mockdataEN' }
+      doc = yield { _id: 0, courseCode: 'xx1122', commentSv: 'mockdataSV', commentEn: 'mockdataEN' }
     } else {
-      doc = yield RoundAnalysis.findById(req.params.id)
+      doc = yield db.fetchRoundAnalysisById(req.params.id)
     }
-
     if (!doc) {
       return next()
     }
-
-    res.json({ id: doc._id, courseCode: doc.courseCode, comment_sv: doc.comment_sv, comment_en: doc.comment_en })
+    res.json(doc)
   } catch (err) {
+    next(err)
+  }
+}
+
+function * postRoundAnalysis (req, res, next) {
+  try {
+    const id = req.body.id
+
+    log.info('Storing roundAnalysis', { _id: id })
+    const exists = yield db.fetchRoundAnalysisById(id)
+
+    if (exists) {
+      log.info('roundAnalysis already exists, returning...', { _id: id })
+      return res.status(400).json({ message: 'An roundAnalysis with that id already exist.' })
+    }
+
+    const org = yield db.storeOrganization(req.body)
+
+    const paths = getPaths()
+    res.status(201).set({
+      'Location': paths.api.getOrganization.uri.replace(':id', org._id)
+    }).json(org)
+  } catch (err) {
+    log.error('Error in postOrganization', { error: err })
     next(err)
   }
 }
@@ -39,16 +62,57 @@ function * postData (req, res, next) {
       doc = new RoundAnalysis({
         _id: req.params.id,
         courseCode: req.body.courseCode.toUpperCase(),
-        comment_en: req.body.comment_en,
-        comment_sv: req.body.comment_sv
+        round: req.body.round,
+        programmeCodes: req.body.programmeCodes,
+        examiners: req.body.examiners,
+        responsibles: req.body.responsibles,
+        examinationRounds: req.body.examinationRounds,
+        registeredStudents: req.body.registeredStudents,
+        examinationGrade: req.body.examinationGrade,
+        alterationText: req.body.alterationText,
+        commentExam: req.body.commentExam,
+        commentChange: req.body.commentChange,
+        isPublished: req.body.isPublished,
+        pdfAnalysisDate: req.body.pdfAnalysisDate,
+        changedDate: req.body.changedDate,
+        changedBy: req.body.changedBy
       })
     } else {
-      doc.comment_en = req.body.comment_en
-      doc.comment_sv = req.body.comment_sv
+      doc.round = req.body.round
+      doc.programmeCodes = req.body.programmeCodes
+      doc.examiners = req.body.examiners
+      doc.responsibles = req.body.responsibles
+      doc.examinationRounds = req.body.examinationRounds
+      doc.registeredStudents = req.body.registeredStudents
+      doc.examinationGrade = req.body.examinationGrade
+      doc.alterationText = req.body.alterationText
+      doc.commentExam = req.body.commentExam
+      doc.commentChange = req.body.commentChange
+      doc.isPublished = req.body.isPublished
+      doc.pdfAnalysisDate = req.body.pdfAnalysisDate
+      doc.changedDate = req.body.changedDate
+      doc.changedBy = req.body.changedBy
     }
 
     yield doc.save()
-    res.json({ id: doc._id, courseCode: doc.courseCode, comment_sv: doc.comment_sv, comment_en: doc.comment_en })
+    res.json({
+      id: doc._id,
+      round: doc.round,
+      programmeCodes: doc.programmeCodes,
+      examiners: doc.examiners,
+      responsibles: doc.responsibles,
+      examinationRounds: doc.examinationRounds,
+      registeredStudents: doc.registeredStudents,
+      examinationGrade: doc.examinationGrade,
+      courseCode: doc.courseCode,
+      alterationText: doc.alterationText,
+      commentExam: doc.commentExam,
+      commentChange: doc.commentChange,
+      isPublished: doc.isPublished,
+      pdfAnalysisDate: doc.pdfAnalysisDate,
+      changedDate: doc.changedDate,
+      changedBy: doc.changedBy
+    })
   } catch (err) {
     next(err)
   }
