# server/models/roundAnalysis.js
@@ -12,7 +12,7 @@ const schema = mongoose.Schema({
     type: String,
     required: [true, 'Enter Course Code']
   },
-  comment_sv: {
+  round: {
     type: String,
     // required: [true, 'Name is required.'],
     trim: true,
@@ -20,7 +20,107 @@ const schema = mongoose.Schema({
     maxlength: [500, 'Comment must have at most 500 characters.'],
     default: ''
   },
-  comment_en: {
+  programmeCodes: {
+    type: String,
+    // required: [true, 'Name is required.'],
+    trim: true,
+    minlength: 0,
+    maxlength: [500, 'Comment must have at most 500 characters.'],
+    default: ''
+  },
+  examiners: {
+    type: String,
+    // required: [true, 'Name is required.'],
+    trim: true,
+    minlength: 0,
+    maxlength: [500, 'Comment must have at most 500 characters.'],
+    default: ''
+  },
+  responsibles: {
+    type: String,
+    // required: [true, 'Name is required.'],
+    trim: true,
+    minlength: 0,
+    maxlength: [500, 'Comment must have at most 500 characters.'],
+    default: ''
+  },
+  examinationRounds: {
+    type: String,
+    // required: [true, 'Name is required.'],
+    trim: true,
+    minlength: 0,
+    maxlength: [500, 'Comment must have at most 500 characters.'],
+    default: ''
+  },
+  registeredStudents: {
+    type: String,
+    // required: [true, 'Name is required.'],
+    trim: true,
+    minlength: 0,
+    maxlength: [500, 'Comment must have at most 500 characters.'],
+    default: ''
+  },
+  examinationGrade: {
+    type: String,
+    // required: [true, 'Name is required.'],
+    trim: true,
+    minlength: 0,
+    maxlength: [500, 'Comment must have at most 500 characters.'],
+    default: ''
+  },
+  alterationText: {
+    type: String,
+    // required: [true, 'Name is required.'],
+    trim: true,
+    minlength: 0,
+    maxlength: [500, 'Comment must have at most 500 characters.'],
+    default: ''
+  },
+  commentExam: {
+    type: String,
+    // required: [true, 'Name is required.'],
+    trim: true,
+    minlength: 0,
+    maxlength: [500, 'Comment must have at most 500 characters.'],
+    default: ''
+  },
+  commentChange: {
+    type: String,
+    // required: [true, 'Name is required.'],
+    trim: true,
+    minlength: 0,
+    maxlength: [500, 'Comment must have at most 500 characters.'],
+    default: ''
+  },
+  isPublished: {
+    type: Boolean,
+    default: false
+  },
+  publishedDate: {
+    type: String, // TODO: DATE
+    // required: [true, 'Name is required.'],
+    trim: true,
+    minlength: 0,
+    maxlength: [500, 'Comment must have at most 500 characters.'],
+    default: ''
+  },
+  pdfAnalysisDate: {
+    type: String, // TODO: DATE
+    // required: [true, 'Name is required.'],
+    trim: true,
+    minlength: 0,
+    maxlength: [500, 'Comment must have at most 500 characters.'],
+    default: ''
+  },
+  changedDate: {
+    type: String, // TODO: DATE
+    // required: [true, 'Name is required.'],
+    trim: true,
+    minlength: 0,
+    maxlength: [500, 'Comment must have at most 500 characters.'],
+    default: ''
+  },
+  changedBy: {
     type: String,
     // required: [true, 'Name is required.'],
     trim: true,
